Add language name label, refactor using component factory
Signed-off-by: Jimmy Tanagra <jcode@tanagra.id.au>